# gitstratum

./: .gitignore  2026-01-10-local-command-caveatcaveat-the-messages-below-w.txt  2026-01-10-local-command-caveatcaveat-the-messages-below-w2.txt  ARCHITECTURE.md  CODE_REVIEW_API_DESIGN.md  CODE_REVIEW_CODE_QUALITY.md  CODE_REVIEW_DEVOPS.md  CODE_REVIEW_DISTRIBUTED_SYSTEMS.md  CODE_REVIEW_DOCUMENTATION.md  CODE_REVIEW_ERROR_HANDLING.md  CODE_REVIEW_OBSERVABILITY.md  CODE_REVIEW_PERFORMANCE.md  CODE_REVIEW_SECURITY.md  CODE_REVIEW_TESTING.md  Cargo.toml  README.md  TESTING.md  USER_MANUAL.md  audit.toml  think.txt
bins/gitstratum-admin/: Cargo.toml
bins/gitstratum-admin/src/: main.rs
bins/gitstratum-control/: Cargo.toml
bins/gitstratum-control/src/: main.rs
bins/gitstratum-coordinator/: Cargo.toml
bins/gitstratum-coordinator/src/: main.rs
bins/gitstratum-ctl/: Cargo.toml
bins/gitstratum-ctl/src/: main.rs
bins/gitstratum-frontend/: Cargo.toml
bins/gitstratum-frontend/src/: main.rs
bins/gitstratum-metadata/: Cargo.toml
bins/gitstratum-metadata/src/: main.rs
bins/gitstratum-object/: Cargo.toml
bins/gitstratum-object/src/: main.rs
crates/gitstratum-coordinator/: ARCHITECTURE.md  Cargo.toml
crates/gitstratum-coordinator/benches/: state_machine.rs
crates/gitstratum-coordinator/src/: client.rs  commands.rs  config.rs  convert.rs  error.rs  heartbeat_batcher.rs  lib.rs  metrics.rs  rate_limit.rs  server.rs  state_machine.rs  tls.rs  topology.rs  validation.rs
crates/gitstratum-coordinator/tests/: integration_tests.rs  load_tests.rs  mtls_tests.rs  upgrade_rollback_tests.rs
crates/gitstratum-frontend-cluster/: Cargo.toml
crates/gitstratum-frontend-cluster/src/: error.rs  lib.rs  server.rs
crates/gitstratum-frontend-cluster/tests/: integration_tests.rs
crates/gitstratum-lfs/: Cargo.toml  README.md
crates/gitstratum-lfs/src/: batch.rs  error.rs  lib.rs  metadata.rs
crates/gitstratum-object-cluster/: Cargo.toml
crates/gitstratum-object-cluster/src/: client.rs  error.rs  lib.rs  server.rs
crates/gitstratum-object-cluster/tests/: integration.rs  repair_e2e.rs
gitstratum-bitcask/: Cargo.toml
gitstratum-bitcask/src/: config.rs  error.rs  lib.rs  store.rs
gitstratum-bitcask/src/bucket/: cache.rs  disk.rs  entry.rs
gitstratum-bitcask/src/compaction/: merger.rs  mod.rs  strategy.rs
gitstratum-bitcask/src/file/: bucket_file.rs  data_file.rs  manager.rs
gitstratum-bitcask/src/io/: batch.rs  mod.rs  queue.rs
gitstratum-bitcask/src/record/: checksum.rs  format.rs
gitstratum-bitcask/src/recovery/: scanner.rs
gitstratum-control-plane/: Cargo.toml
gitstratum-control-plane-cluster/: ARCHITECTURE.md  Cargo.toml
gitstratum-control-plane-cluster/src/: client.rs  lib.rs  proto.rs  server.rs
gitstratum-control-plane-cluster/src/audit/: logger.rs  retention.rs
gitstratum-control-plane-cluster/src/auth/: rbac.rs  ssh_key.rs  token.rs
gitstratum-control-plane-cluster/src/config/: cluster.rs
gitstratum-control-plane-cluster/src/hashring/: rebalance.rs  state.rs
gitstratum-control-plane-cluster/src/membership/: registry.rs
gitstratum-control-plane-cluster/src/raft/: state_machine.rs
gitstratum-control-plane-cluster/src/ratelimit/: enforcement.rs  mod.rs  state.rs
gitstratum-control-plane-cluster/tests/: error_tests.rs  raft_tests.rs  state_tests.rs
gitstratum-control-plane/src/: client.rs  lib.rs  locks.rs  raft.rs  server.rs  state.rs
gitstratum-control-plane/src/audit/: logger.rs  mod.rs  retention.rs
gitstratum-control-plane/src/auth/: cache.rs  mod.rs  rbac.rs  ssh_key.rs  token.rs
gitstratum-control-plane/src/config/: cluster.rs  feature_flags.rs  mod.rs
gitstratum-control-plane/src/hashring/: mod.rs  notify.rs  rebalance.rs  state.rs
gitstratum-control-plane/src/membership/: failure.rs  health.rs  registry.rs
gitstratum-control-plane/src/raft/: log.rs  mod.rs  network.rs  node.rs  state_machine.rs
gitstratum-control-plane/src/ratelimit/: bucket.rs  enforcement.rs  mod.rs  state.rs
gitstratum-control-plane/tests/: error_tests.rs  locks_tests.rs  raft_tests.rs  state_tests.rs
gitstratum-core/: Cargo.toml
gitstratum-core/benches/: core.rs
gitstratum-core/src/: error.rs  lib.rs  object.rs  repo.rs
gitstratum-frontend/: Cargo.toml
gitstratum-frontend/src/: error.rs  frontend.rs  lib.rs  negotiate.rs  pack.rs  receive_pack.rs  server.rs  upload_pack.rs
gitstratum-frontend/src/cache/: mod.rs  negotiation.rs  refs.rs  session.rs
gitstratum-frontend/src/client/: control.rs  metadata.rs  mod.rs
gitstratum-frontend/src/coalesce/: metrics.rs  mod.rs
gitstratum-frontend/src/commands/: ls_refs.rs  mod.rs  receive_pack.rs  upload_pack.rs
gitstratum-frontend/src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs  timeout.rs
gitstratum-frontend/src/pack/: assembly.rs  mod.rs  streaming.rs
gitstratum-frontend/src/protocol/: capabilities.rs  mod.rs  pktline.rs
gitstratum-frontend/tests/: integration_tests.rs
gitstratum-hashring/: Cargo.toml
gitstratum-hashring/src/: lib.rs
gitstratum-metadata/: Cargo.toml
gitstratum-metadata/src/: client.rs  error.rs  graph.rs  lib.rs  server.rs  store.rs
gitstratum-metadata/src/graph/: cache.rs  commit_graph.rs  mod.rs  reachability.rs
gitstratum-metadata/src/object_index/: location.rs
gitstratum-metadata/src/pack_cache/: invalidation.rs  mod.rs  storage.rs  ttl.rs
gitstratum-metadata/src/partition/: rebalance.rs  router.rs
gitstratum-metadata/src/refs/: cache.rs  mod.rs  storage.rs  update.rs
gitstratum-metadata/tests/: graph_tests.rs  server_tests.rs  store_tests.rs
gitstratum-metrics/: Cargo.toml
gitstratum-metrics/src/: lib.rs  prometheus.rs
gitstratum-object/: Cargo.toml
gitstratum-object/src/: client.rs  error.rs  lib.rs  server.rs  store.rs
gitstratum-object/tests/: integration.rs
gitstratum-operator/: Cargo.toml
gitstratum-operator/src/: leader.rs  lib.rs  resources.rs
gitstratum-operator/tests/: integration_tests.rs
gitstratum-proto/: Cargo.toml
gitstratum-proto/proto/: gitstratum.proto
gitstratum-proto/src/: lib.rs
(+280 files in other folders)
