[workspace]
resolver = "2"
members = [
    "gitstratum-core",
    "gitstratum-hashring",
    "gitstratum-control-plane-cluster",
    "gitstratum-metadata-cluster",
    "gitstratum-object-cluster",
    "gitstratum-frontend-cluster",
    "gitstratum-proto",
    "gitstratum-operator",
    "gitstratum-metrics",
    "gitstratum-storage",
    "gitstratum-lfs",
    "bins/gitstratum-control",
    "bins/gitstratum-ctl",
    "bins/gitstratum-frontend",
    "bins/gitstratum-metadata",
    "bins/gitstratum-object",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gitstratum/gitstratum"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"
prost-types = "0.12"

# gRPC
tonic = "0.10"
tonic-build = "0.10"

# Storage
rocksdb = "0.22"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Raft consensus
openraft = { version = "0.9", features = ["serde"] }

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
bytes = { version = "1.5", features = ["serde"] }
parking_lot = "0.12"
dashmap = "5.5"
flate2 = "1.0"
lru = "0.12"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
siphasher = "1.0"

# Kubernetes
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
schemars = "0.8"

# Testing
tokio-test = "0.4"
tempfile = "3.9"
proptest = "1.4"

# Internal crates
gitstratum-core = { path = "gitstratum-core" }
gitstratum-hashring = { path = "gitstratum-hashring" }
gitstratum-control-plane-cluster = { path = "gitstratum-control-plane-cluster" }
gitstratum-metadata-cluster = { path = "gitstratum-metadata-cluster" }
gitstratum-object-cluster = { path = "gitstratum-object-cluster" }
gitstratum-frontend-cluster = { path = "gitstratum-frontend-cluster" }
gitstratum-proto = { path = "gitstratum-proto" }
gitstratum-operator = { path = "gitstratum-operator" }
gitstratum-storage = { path = "gitstratum-storage" }
gitstratum-lfs = { path = "gitstratum-lfs" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
unused_variables = "allow"
unused_mut = "allow"
dead_code = "allow"

[workspace.lints.clippy]
type_complexity = "allow"
result_large_err = "allow"
field_reassign_with_default = "allow"
too_many_arguments = "allow"
needless_range_loop = "allow"
for_kv_map = "allow"
let_and_return = "allow"
derivable_impls = "allow"
should_implement_trait = "allow"
enum_variant_names = "allow"
await_holding_lock = "allow"
unnecessary_get_then_check = "allow"
new_without_default = "allow"
match_like_matches_macro = "allow"
len_without_is_empty = "allow"
from_over_into = "allow"
unnecessary_map_or = "allow"
useless_conversion = "allow"
implicit_saturating_sub = "allow"
manual_flatten = "allow"
extra_unused_type_parameters = "allow"
needless_borrows_for_generic_args = "allow"
vec_init_then_push = "allow"
needless_update = "allow"
io_other_error = "allow"
assertions_on_constants = "allow"
single_match = "allow"
if_same_then_else = "allow"
redundant_pattern_matching = "allow"
clone_on_copy = "allow"

[profile.release]
lto = true
codegen-units = 1
