[workspace]
resolver = "2"
members = [
    "crates/gitstratum-core",
    "crates/gitstratum-hashring",
    "crates/gitstratum-coordinator",
    "crates/gitstratum-metadata-cluster",
    "crates/gitstratum-object-cluster",
    "crates/gitstratum-frontend-cluster",
    "crates/gitstratum-proto",
    "crates/gitstratum-metrics",
    "crates/gitstratum-storage",
    "crates/gitstratum-lfs",
    "bins/gitstratum-coordinator",
    "bins/gitstratum-frontend",
    "bins/gitstratum-metadata",
    "bins/gitstratum-object",
    "bins/gitstratum-admin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gitstratum/gitstratum"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"
prost-types = "0.12"

# gRPC
tonic = "0.10"
tonic-build = "0.10"

# Storage
rocksdb = "0.22"

# Hashing & Cryptography
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"

# SSH
russh = "0.48"
russh-keys = "0.48"

# Raft consensus
openraft = { version = "0.9", features = ["serde"] }

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
base64 = "0.22"
bytes = { version = "1.5", features = ["serde"] }
parking_lot = "0.12"
dashmap = "5.5"
flate2 = "1.0"
lru = "0.12"
rand = "0.8"
rayon = "1.10"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
siphasher = "1.0"

# Kubernetes
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
schemars = "0.8"

# Testing
tokio-test = "0.4"
tempfile = "3.9"
proptest = "1.4"

# Internal crates
gitstratum-core = { path = "crates/gitstratum-core" }
gitstratum-hashring = { path = "crates/gitstratum-hashring" }
gitstratum-coordinator = { path = "crates/gitstratum-coordinator" }
gitstratum-metadata-cluster = { path = "crates/gitstratum-metadata-cluster" }
gitstratum-object-cluster = { path = "crates/gitstratum-object-cluster" }
gitstratum-frontend-cluster = { path = "crates/gitstratum-frontend-cluster" }
gitstratum-proto = { path = "crates/gitstratum-proto" }
gitstratum-storage = { path = "crates/gitstratum-storage" }
gitstratum-lfs = { path = "crates/gitstratum-lfs" }
gitstratum-metrics = { path = "crates/gitstratum-metrics" }

# External HA framework (has newer k8s dependencies, enable via kubernetes feature)
# k8s-operator = { path = "../k8s-operator" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
result_large_err = "allow"

[profile.release]
lto = true
codegen-units = 1
