[package]
name = "gitstratum-control-plane-cluster"
description = "Raft-based control plane for GitStratum cluster coordination"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gitstratum-core = { workspace = true }
gitstratum-hashring = { workspace = true }
gitstratum-proto = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }

openraft = { workspace = true }
rocksdb = { workspace = true }

# k8s-operator integration (requires vendoring k8s-openapi 0.26+, kube 2.0+)
# Uncomment when vendor is updated:
# k8s-operator = { path = "../../k8s-operator", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
# Feature flag for k8s-operator integration (code guarded but dependency not yet vendored)
kubernetes = []

[lints]
workspace = true
