[package]
name = "gitstratum-control-plane"
description = "Raft-based control plane for GitStratum cluster coordination"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gitstratum-core = { workspace = true }
gitstratum-hashring = { workspace = true }
gitstratum-proto = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }

openraft = { workspace = true }
rocksdb = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
