[package]
name = "gitstratum-hashring"
description = "Consistent hash ring implementation for GitStratum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gitstratum-core = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
criterion = "0.5"

[[bench]]
name = "hashring"
harness = false

[lints]
workspace = true
