[package]
name = "gitstratum-metadata"
description = "Metadata storage cluster for GitStratum (commits, trees, refs)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gitstratum-core = { workspace = true }
gitstratum-proto = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
lru = { workspace = true }
chrono = { workspace = true }
siphasher = { workspace = true }

rocksdb = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
