[package]
name = "gitstratum-control-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "gitstratum-control"
path = "src/main.rs"

[dependencies]
gitstratum-control-plane-cluster = { path = "../../crates/gitstratum-control-plane-cluster" }
gitstratum-core = { path = "../../crates/gitstratum-core" }
gitstratum-proto = { path = "../../crates/gitstratum-proto" }
gitstratum-hashring = { path = "../../crates/gitstratum-hashring" }
tokio.workspace = true
clap = { version = "4.4", features = ["derive"] }
anyhow.workspace = true
tempfile.workspace = true
openraft.workspace = true

[lints]
workspace = true
