[package]
name = "gitstratum-coordinator-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "gitstratum-coordinator"
path = "src/main.rs"

[dependencies]
gitstratum-coordinator = { path = "../../crates/gitstratum-coordinator" }
gitstratum-proto = { path = "../../crates/gitstratum-proto" }

k8s-operator = { path = "../../../k8s-operator", features = ["ha"] }

tokio.workspace = true
tonic.workspace = true
clap = { version = "4.4", features = ["derive"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[lints]
workspace = true
