[package]
name = "gitstratum-ctl-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "gitstratum-ctl"
path = "src/main.rs"

[dependencies]
gitstratum-control-plane = { path = "../../gitstratum-control-plane" }
gitstratum-core = { path = "../../gitstratum-core" }
gitstratum-proto = { path = "../../gitstratum-proto" }
gitstratum-hashring = { path = "../../gitstratum-hashring" }
tokio.workspace = true
clap = { version = "4.4", features = ["derive"] }
anyhow.workspace = true

[lints]
workspace = true
