[package]
name = "gitstratum-frontend-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "gitstratum-frontend"
path = "src/main.rs"

[dependencies]
gitstratum-frontend = { path = "../../gitstratum-frontend" }
gitstratum-control-plane = { path = "../../gitstratum-control-plane" }
gitstratum-metadata = { path = "../../gitstratum-metadata" }
gitstratum-object = { path = "../../gitstratum-object" }
gitstratum-core = { path = "../../gitstratum-core" }
gitstratum-proto = { path = "../../gitstratum-proto" }
gitstratum-hashring = { path = "../../gitstratum-hashring" }
tokio.workspace = true
clap = { version = "4.4", features = ["derive"] }
anyhow.workspace = true
uuid.workspace = true
