[package]
name = "gitstratum-frontend-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "gitstratum-frontend"
path = "src/main.rs"

[dependencies]
gitstratum-frontend-cluster = { path = "../../gitstratum-frontend-cluster" }
gitstratum-control-plane-cluster = { path = "../../gitstratum-control-plane-cluster" }
gitstratum-metadata-cluster = { path = "../../gitstratum-metadata-cluster" }
gitstratum-object-cluster = { path = "../../gitstratum-object-cluster" }
gitstratum-core = { path = "../../gitstratum-core" }
gitstratum-proto = { path = "../../gitstratum-proto" }
gitstratum-hashring = { path = "../../gitstratum-hashring" }
tokio.workspace = true
clap = { version = "4.4", features = ["derive"] }
anyhow.workspace = true
uuid.workspace = true

[lints]
workspace = true
