[package]
name = "gitstratum-frontend-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "gitstratum-frontend"
path = "src/main.rs"

[dependencies]
gitstratum-frontend-cluster = { path = "../../crates/gitstratum-frontend-cluster" }
gitstratum-metadata-cluster = { path = "../../crates/gitstratum-metadata-cluster" }
gitstratum-object-cluster = { path = "../../crates/gitstratum-object-cluster" }
gitstratum-core = { path = "../../crates/gitstratum-core" }
gitstratum-proto = { path = "../../crates/gitstratum-proto" }
gitstratum-hashring = { path = "../../crates/gitstratum-hashring" }
tokio.workspace = true
clap = { version = "4.4", features = ["derive"] }
anyhow.workspace = true
uuid.workspace = true

[lints]
workspace = true
