[package]
name = "gitstratum-metadata-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "gitstratum-metadata"
path = "src/main.rs"

[dependencies]
gitstratum-metadata-cluster = { path = "../../crates/gitstratum-metadata-cluster" }
gitstratum-core = { path = "../../crates/gitstratum-core" }
gitstratum-proto = { path = "../../crates/gitstratum-proto" }
tokio.workspace = true
clap = { version = "4.4", features = ["derive"] }
tonic.workspace = true
anyhow.workspace = true
uuid.workspace = true

[lints]
workspace = true
