[package]
name = "gitstratum-object-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "gitstratum-object"
path = "src/main.rs"

[dependencies]
gitstratum-object-cluster = { path = "../../crates/gitstratum-object-cluster" }
gitstratum-storage = { path = "../../crates/gitstratum-storage", optional = true }
gitstratum-core = { path = "../../crates/gitstratum-core" }
gitstratum-proto = { path = "../../crates/gitstratum-proto" }
tokio.workspace = true
clap = { version = "4.4", features = ["derive"] }
tonic.workspace = true
anyhow.workspace = true
uuid.workspace = true

[features]
default = ["bucketstore"]
bucketstore = ["gitstratum-object-cluster/bucketstore", "dep:gitstratum-storage"]

[lints]
workspace = true
