[package]
name = "gitstratum-coordinator"
description = "Raft-based HA coordinator for GitStratum cluster management"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gitstratum-proto.workspace = true
gitstratum-hashring.workspace = true

k8s-operator = { path = "../../../k8s-operator", features = ["ha"] }

tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
proptest.workspace = true
criterion = "0.5"

[lints]
workspace = true

[[bench]]
name = "state_machine"
harness = false
