[package]
name = "gitstratum-frontend-cluster"
description = "Git protocol frontend for GitStratum (HTTP and SSH serving)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gitstratum-core = { workspace = true }
gitstratum-hashring = { workspace = true }
gitstratum-proto = { workspace = true }

argon2 = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
siphasher = "1.0"
dashmap = "5.5"
metrics = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
